# SchoolProjects

./: README.md
HardwareDesignClass/: README.md
HardwareDesignClass/HW3/: arithmetic_io.c  compute_age.c  greetings.c
HardwareDesignClass/HW4/: age_this_year.s  arithmetic_io.s  dogs.s  hello.s
HardwareDesignClass/HW5/: add_two.s
HardwareDesignClass/HW6/: add_one.s  add_sub.s  greater_than_four.s  greater_than_four_v2.s  less_or_equal_ten.s  multiply_pairs.s
HardwareDesignClass/HW7/: user_positive_sum.s  user_square_sum.s  user_sum.s
SoftwareDesignHW/colema13-main/: README.md
SoftwareDesignHW/colema13-main/hw-1/: hw-1.cpp  task-1-test.txt  task-2-test.txt
SoftwareDesignHW/colema13-main/hw-2/: Album.cpp  Album.hpp  main.cpp  write-up.txt
SoftwareDesignHW/colema13-main/hw-3/: BankAccount.cpp  BankAccount.hpp  CheckingAccount.cpp  CheckingAccount.hpp  SavingAccount.cpp  SavingAccount.hpp  main.cpp  write-up.txt
SoftwareDesignHW/colema13-main/hw-5/: CMakeLists.txt  hw-6-write-up.txt  write-up.txt
SoftwareDesignHW/colema13-main/hw-5/test/: CMakeLists.txt  CalculatorTests.cpp
SoftwareDesignHW/colema13-main/lab-1/: main.cpp  write-up.txt
SoftwareDesignHW/colema13-main/lab-2/: IntVector.cpp  IntVector.hpp  main.cpp  write-up.txt
SoftwareDesignHW/colema13-main/lab-3/: BankAccount.cpp  BankAccount.hpp  CheckingAccount.cpp  Utils.cpp  (+6 more)
SoftwareDesignProject/: README.md
SoftwareDesignProject/test/: AccountManagerTests.cpp  BankAccountTests.cpp
group1-main/: account_manager_test.cpp
group1-main/test/: CheckingAccountTests.cpp  SavingsAccountTests.cpp
(+22 files in other folders)
